crates/mun_codegen/src/snapshots/test__shift_op_u128.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn leftshift(a: u128, b: u128) -> u128 { a << b }\npub fn rightshift(a: u128, b: u128) -> u128 { a >> b }"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo = type { [16 x i8], i8*, i32, i8, i8 }

@global_type_table = external global [1 x %struct.MunTypeInfo*]

define i128 @leftshift(i128, i128) {
body:
  %left_shift = shl i128 %0, %1
  ret i128 %left_shift
}

define i128 @rightshift(i128, i128) {
body:
  %right_shift = lshr i128 %0, %1
  ret i128 %right_shift
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8*, i32, i8, i8 }

@"type_info::<core::u128>::name" = private unnamed_addr constant [11 x i8] c"core::u128\00"
@"type_info::<core::u128>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"\E67\1BU\E9k\95\93d\14}\1C\96S\95\F0", i8* getelementptr inbounds ([11 x i8], [11 x i8]* @"type_info::<core::u128>::name", i32 0, i32 0), i32 128, i8 8, i8 0 }
@global_type_table = constant [1 x %struct.MunTypeInfo*] [%struct.MunTypeInfo* @"type_info::<core::u128>"]

