crates/mun_codegen/src/snapshots/test__shift_op_u8.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn leftshift(a: u8, b: u8) -> u8 { a << b }\npub fn rightshift(a: u8, b: u8) -> u8 { a >> b }"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@global_type_table = external global [1 x %struct.MunTypeInfo addrspace(4)*]

define i8 @leftshift(i8 %0, i8 %1) {
body:
  %left_shift = shl i8 %0, %1
  ret i8 %left_shift
}

define i8 @rightshift(i8 %0, i8 %1) {
body:
  %right_shift = lshr i8 %0, %1
  ret i8 %right_shift
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@"type_info::<core::u8>::name" = private unnamed_addr constant [9 x i8] c"core::u8\00"
@"type_info::<core::u8>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"\A0y\A7S\B6(n\F7f&H\E1\F9\AD\04>", [9 x i8]* @"type_info::<core::u8>::name", i32 8, i8 1, i8 0 }
@global_type_table = global [1 x %struct.MunTypeInfo addrspace(4)*] [%struct.MunTypeInfo addrspace(4)* @"type_info::<core::u8>"]

