crates/mun_codegen/src/snapshots/test__true_is_true_group_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn test_true():bool {\n    true\n}\n\nfn test_false():bool {\n    false\n}"
---
; ModuleID = 'group_name'
source_filename = "group_name"

