crates/mun_codegen/src/snapshots/test__update_parameter_group_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn add_three(a:int):int {\n  a += 3;\n  a\n}"
---
; ModuleID = 'group_name'
source_filename = "group_name"

